--- a/assessment3.html
+++ b/assessment3.html
@@ -7,7 +7,7 @@
     <title>HTML Assessment 3</title>
 </head>
 <body>
-    <iframe src="file:///C:/Users/Priya/Desktop/ea14/HTML/assessment%20work/assessment%201.html" width="400" height="400">Practice Assessment 1</iframe>
+    <iframe src="file:///C:/Users/Priya/Desktop/ea14/HTML/assessmentwork/assessment1.html" width="400" height="400">Practice Assessment 1</iframe>
 </body>
 <a href="video.html">Click here to see video</a>    
 </video>
