--- a/assessment3.html
+++ b/assessment3.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <iframe src="file:///C:/Users/Priya/Desktop/ea14/HTML/assessmentwork/assessment1.html" width="400" height="400">Practice Assessment 1</iframe>
+    
+    <a href="video.html">Click here to see video</a>
 </body>
-<a href="video.html">Click here to see video</a>    
-</video>
+<!-- <a href="video.html">Click here to see video</a>  -->
 </html>
