--- a/assessment3.html
+++ b/assessment3.html
@@ -7,7 +7,7 @@
     <title>HTML Assessment 3</title>
 </head>
 <body>
-    <iframe src="./assessmentwork/assessment1.html" width="400" height="400">Practice Assessment 1</iframe>
+    <iframe src="https://priyanka316.github.io/ea14/assessment1.html" width="400" height="400">Practice Assessment 1</iframe>
     
     <a href="video.html">Click here to see video</a>
 </body>
