--- a/CSSassessment2.html
+++ b/CSSassessment2.html
@@ -26,7 +26,7 @@
             </div>
         </div>
 
-        <section class="Exiciting-offer">
+        <section class="Circle">
             <div class="offers">
                 <p class="text"> EXCITING OFFERS</p>
                 <hr />
